objects/Deficiency__c.object
<CustomObject>
    <description>This object will allow tech support and engineering to better track cases, bugs and enhancement requests.</description>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deficiency_ID__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Deficiency ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <label>Issue Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Classification__c</fullName>
        <label>PM Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H/W Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacking Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacking Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <picklist>
            <picklistValues>
                <fullName>Bug - Code Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Code__c</fullName>
        <label>Root Cause Code</label>
        <picklist>
            <picklistValues>
                <fullName>Bug - Code Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Network Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interoperability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Behaviour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usability Improvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Where_Resolved__c</fullName>
        <label>Where Resolved</label>
        <picklist>
            <picklistValues>
                <fullName>TAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deficiency</label>
    <nameField>
        <label>Deficiency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deficiencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>